rsvp/static/css/style.css
/* ... */
.hero-box .date {
    font-size: 28px;
    color: #413a38;
    background: transparent url('../svg/ribbon.svg') no-repeat center top;
    height: 126px;
    padding-top: 8px;
    font-weight: bold;
    margin-bottom: 15px;
    -webkit-opacity: 0.85;
    -moz-opacity: 0.85;
    opacity: 0.85;
}

.headline .names {
    font-size: 76px;
    margin-bottom: 20px;
}

.headline .statement {
    font-size: 36px;
    margin-bottom: 45px;
}

.headline .statement-text {
    display: inline-block;
    padding-left: 10px;
    padding-right: 10px;
}

.headline .swirl-left {
    display: inline-block;
    background: transparent url('../svg/swirl-left.svg') no-repeat left center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    width: 34px;
    height: 39px;
}

.headline .swirl-right {
    display: inline-block;
    background: transparent url('../svg/swirl-right.svg') no-repeat right center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    width: 34px;
    height: 39px;
}

/* ======= Wedding Section ======= */
.wedding-section {
    padding-top: 90px;
}

.wedding-section .title {
    margin-bottom: 30px;
}

.wedding-section .love-icon {
    font-size: 32px;
    width: 55px;
    display: inline-block;
    color: #fd767b;
    vertical-align: middle;
}

.wedding-section .cols-wrapper {
    margin-bottom: 45px;
}

.wedding-section .col-inner {
    padding: 60px 30px;
    background: #f5f5f5;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border-radius: 10px;
    -moz-background-clip: padding;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
}

.wedding-section .subtitle {
    font-size: 28px;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 30px;
}

.wedding-section .intro {
    margin-bottom: 30px;
    color: #786b67;
}

.wedding-section .meta-list {
    font-size: 16px;
    display: inline-block;
}

.wedding-section .meta-list li {
    margin-bottom: 15px;
}

.wedding-section .meta-list .list-link {
    padding-left: 55px;
    font-size: 16px;
    margin-bottom: 5px;
}

.wedding-section .action-wrapper {
    margin-bottom: 90px;
}

.countdown-box {
    margin-bottom: 60px;
}

.countdown-box span {
    display: inline-block;
    margin-left: 5px;
    min-width: 100px;
    text-align: center;
    font-weight: normal;
}

.countdown-box span:first-child {
    margin-left: 0;
}

.countdown-box span.number {
    font-size: 38px;
    display: block;
    color: #fc444b;
    font-weight: bold;
}

.countdown-box span.unit {
    font-size: 22px;
    display: block;
    color: #786b67;
}

.map-container {
    height: 460px;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    /*padding: 5px;*/
    border: 1px solid #eeeeee;
    font-family: arial sans-serif;
}

.map-container .note {
    margin-bottom: 5px;
    font-size: 16px;
}

.map-container .map-title {
    font-size: 24px;
}

/* ======= Story Section ======= */
.story-section {
    background: #413a38 url('../img/story-bg1.jpg') no-repeat 50% top;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    padding-top: 60px;
    padding-bottom: 90px;
}

.story-section .container {
    position: relative;
}

.story-box .title {
    margin-bottom: 60px;
}

.story-box .content-container {
    background: rgba(255, 255, 255, 0.85);
    padding: 30px;
    text-align: left;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border-radius: 10px;
    -moz-background-clip: padding;
    -webkit-background-clip: padding-box;
    background-clip: padding-box;
}

.story-carousel .item {
    min-height: 500px;
    padding: 15px;
}

.story-carousel .item-title {
    font-size: 24px;
    margin-bottom: 30px;
    margin-top: 15px;
    font-weight: bold;
}

.story-carousel .carousel-indicators {
    bottom: 0;
}

.story-carousel .carousel-indicators li {
    background: #a99f9c;
    border-color: #a99f9c;
    -webkit-opacity: 0.8;
    -moz-opacity: 0.8;
    opacity: 0.8;
}

.story-carousel .carousel-indicators li.active {
    width: 12px;
    height: 12px;
    margin: 0;
    background-color: #413a38;
    border-color: #413a38;
}

.story-carousel .love-icon {
    display: inline-block;
    margin-right: 10px;
}

.story-carousel .icon-jar {
    font-size: 40px;
}

.story-carousel .icon-glasses {
    font-size: 42px;
}

/* ======= Party Section ======= */
.party-section {
    padding-top: 90px;
}

@media (min-width: 767px) and (max-width: 1200px) {
    .party-section .btn-primary {
        padding: 5px 5px;
    }
}

.party-section .modal .modal-header h4 {
    font-weight: bold;
}

.party-section .modal .modal-body {
    padding: 0 25px 15px;
}

.party-section .modal .modal-body img {
    margin-bottom: 15px;
}

.usher-container {
    position: relative;
}
.usher-container img {
    width: 100%;
}
.usher-container img.overlay {
    position: absolute;
    display: none;
    left: 0;
    top: 0;
}
.usher-container:hover img.overlay {
    display: block;
}

/* ======= Gallery Section ======= */
.gallery-section {
    padding-top: 90px;
    padding-bottom: 90px;
    background: #f5f5f5;
}

.gallery-section .title {
    margin-bottom: 30px;
}

.gallery-section .intro {
    margin-bottom: 60px;
    font-size: 16px;
    color: #786b67;
}

.gallery-section .intro .hashtag {
    font-family: 'Montserrat', arial, sans-serif;
}

.instafeed-wrapper {
    overflow: hidden;
}

.instagram-item {
    float: left;
    display: inline-block;
}

.btn-load-more {
    margin-top: 45px;
}
/* ... */

